--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
         <java.version>1.8</java.version>
         <springfox.version>2.9.2</springfox.version>
         <orika.version>1.5.2</orika.version>
+        <neo4j.version>3.4.9</neo4j.version>
+        <neo4j-ogm.version>3.1.4</neo4j-ogm.version>
     </properties>
 
     <dependencies>
@@ -83,6 +85,19 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
+        </dependency>
+
+        <!-- Neo4j Embedded for Test -->
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j</artifactId>
+            <version>${neo4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-ogm-embedded-driver</artifactId>
+            <version>${neo4j-ogm.version}</version>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
