--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,9 +11,7 @@ management:
   security:
     enabled: false
   endpoints:
-    web:
-      base-path: /
-      exposure.include: "*"
+    web.exposure.include: "*"
   endpoint:
     health:
       show-details: always
