overall project update

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,10 +8,9 @@ spring:
       password: neo4j
 
 management:
-  security:
-    enabled: false
   endpoints:
-    web.exposure.include: "*"
+    web:
+      exposure.include: "*"
   endpoint:
     health:
       show-details: always
