--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
 
   neo4j:
     container_name: neo4j
-    image: neo4j:3.5.12
+    image: neo4j:3.5.19 # version 4.x.x doesn't work with current spring boot version
     ports:
       - "7474:7474"
       - "7687:7687"
     environment:
       - NEO4J_AUTH=none
-#    healthcheck:
-#      test: ""
-#      start_period: 10s
+    healthcheck:
+      test: "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"
+      start_period: 10s
