--- a/pom.xml
+++ b/pom.xml
@@ -14,16 +14,16 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.1.RELEASE</version>
+        <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
-        <java.version>1.8</java.version>
-        <springfox.version>2.9.2</springfox.version>
-        <orika.version>1.5.4</orika.version>
-        <neo4j.version>3.5.12</neo4j.version>
-        <neo4j-ogm.version>3.2.2</neo4j-ogm.version>
+        <java.version>11</java.version>
+        <mapstruct.version>1.3.1.Final</mapstruct.version>
+        <springdoc.openapi-ui.version>1.4.1</springdoc.openapi-ui.version>
+        <neo4j.version>3.5.19</neo4j.version>
+        <neo4j-ogm.version>3.2.12</neo4j-ogm.version>
     </properties>
 
     <dependencies>
@@ -43,6 +43,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
 
         <!--Caffeine-->
         <dependency>
@@ -50,23 +54,24 @@
             <artifactId>caffeine</artifactId>
         </dependency>
 
-        <!-- Swagger2 -->
+        <!-- SpringDoc OpenApi -->
         <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox.version}</version>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-ui</artifactId>
+            <version>${springdoc.openapi-ui.version}</version>
         </dependency>
 
-        <!-- Orika -->
+        <!-- MapStruct -->
         <dependency>
-            <groupId>ma.glasnost.orika</groupId>
-            <artifactId>orika-core</artifactId>
-            <version>${orika.version}</version>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct</artifactId>
+            <version>${mapstruct.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+            <version>${mapstruct.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <!-- Neo4j Embedded for Test -->
