--- a/restaurant-api/pom.xml
+++ b/restaurant-api/pom.xml
@@ -16,7 +16,7 @@
 
     <properties>
 		<mapstruct.version>1.3.1.Final</mapstruct.version>
-		<springdoc.openapi-ui.version>1.4.1</springdoc.openapi-ui.version>
+		<springdoc.openapi.version>1.4.4</springdoc.openapi.version>
 		<neo4j.version>3.5.19</neo4j.version>
 		<neo4j-ogm.version>3.2.12</neo4j-ogm.version>
     </properties>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-ui</artifactId>
-			<version>${springdoc.openapi-ui.version}</version>
+			<version>${springdoc.openapi.version}</version>
 		</dependency>
 
 		<!-- MapStruct -->
