--- a/restaurant-api/pom.xml
+++ b/restaurant-api/pom.xml
@@ -15,10 +15,10 @@
     <description>Demo project for Spring Boot</description>
 
     <properties>
-		<mapstruct.version>1.3.1.Final</mapstruct.version>
-		<springdoc.openapi.version>1.4.4</springdoc.openapi.version>
-		<neo4j.version>3.5.19</neo4j.version>
-		<neo4j-ogm.version>3.2.12</neo4j-ogm.version>
+		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
+		<springdoc.openapi.version>1.4.8</springdoc.openapi.version>
+		<neo4j.version>3.5.22</neo4j.version>
+		<neo4j-ogm.version>3.2.17</neo4j-ogm.version>
     </properties>
 
     <dependencies>
@@ -60,12 +60,12 @@
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct</artifactId>
-			<version>${mapstruct.version}</version>
+			<version>${org.mapstruct.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mapstruct</groupId>
 			<artifactId>mapstruct-processor</artifactId>
-			<version>${mapstruct.version}</version>
+			<version>${org.mapstruct.version}</version>
 			<scope>provided</scope>
 		</dependency>
 
