project update - update to spring-boot 2.4.1; - overall project update due to the change from `org.neo4j` to `org.springframework.data.neo4j`; - update mapstruct configuration in pom.xml using annotationProcessorPaths; - add testcontaiers for integration tests; - change city, restaurant and dish ids from String to UUID; - improve test cases; - update README.

--- a/restaurant-api/src/test/resources/application.yml
+++ b/restaurant-api/src/test/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   application:
     name: restaurant-api
 
-## You can enable persistence for the embedded mode by providing a path to a database file in your configuration
-## ---
-#  data:
-#    neo4j:
-#      uri: file://${user.dir}/target/neo4j-embedded/graph.db
+logging:
+  level:
+    org.springframework.cache: TRACE
+    org.springframework.transaction.interceptor: TRACE
+    org.springframework.data.neo4j.cypher: TRACE
