--- a/restaurant-api/src/main/resources/application.yml
+++ b/restaurant-api/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   application:
     name: restaurant-api
-  data:
-    neo4j:
-      uri: bolt://localhost
+  neo4j:
+    uri: bolt://localhost:7687
+    authentication:
       username: neo4j
       password: neo4j
 
@@ -24,3 +24,4 @@ logging:
   level:
     org.springframework.cache: TRACE
     org.springframework.transaction.interceptor: TRACE
+    org.springframework.data.neo4j.cypher: TRACE
