--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,9 @@
 
     <properties>
         <java.version>11</java.version>
-        <spring-graalvm-native.version>0.8.5</spring-graalvm-native.version>
+        <spring-native.version>0.10.0-SNAPSHOT</spring-native.version>
+        <javax-cache-api.version>1.1.1</javax-cache-api.version>
+        <apache-log4j-core.version>2.14.1</apache-log4j-core.version>
         <jib-maven-plugin.version>3.0.0</jib-maven-plugin.version>
         <docker-image.prefix>ivanfranchin</docker-image.prefix>
     </properties>
@@ -30,8 +32,20 @@
     <dependencies>
         <dependency>
             <groupId>org.springframework.experimental</groupId>
-            <artifactId>spring-graalvm-native</artifactId>
-            <version>${spring-graalvm-native.version}</version>
+            <artifactId>spring-native</artifactId>
+            <version>${spring-native.version}</version>
+        </dependency>
+
+        <!-- The dependencies below are needed to build the Docker native image -->
+        <dependency>
+            <groupId>javax.cache</groupId>
+            <artifactId>cache-api</artifactId>
+            <version>${javax-cache-api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>${apache-log4j-core.version}</version>
         </dependency>
     </dependencies>
 
@@ -47,11 +61,34 @@
                         <env>
                             <BP_BOOT_NATIVE_IMAGE>1</BP_BOOT_NATIVE_IMAGE>
                             <BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                                -Dspring.spel.ignore=true
+                                -Dspring.native.remove-yaml-support=true
                                 --enable-https
+                                --initialize-at-build-time=sun.instrument.InstrumentationImpl
                             </BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>
                         </env>
                     </image>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.springframework.experimental</groupId>
+                <artifactId>spring-aot-maven-plugin</artifactId>
+                <version>${spring-native.version}</version>
+                <executions>
+                    <execution>
+                        <id>test-generate</id>
+                        <goals>
+                            <goal>test-generate</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>generate</id>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <removeYamlSupport>true</removeYamlSupport>
                 </configuration>
             </plugin>
             <plugin>
@@ -69,17 +106,20 @@
 
     <repositories>
         <repository>
-            <id>spring-milestone</id>
-            <name>Spring milestone</name>
-            <url>https://repo.spring.io/milestone</url>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
         </repository>
     </repositories>
 
     <pluginRepositories>
         <pluginRepository>
-            <id>spring-milestone</id>
-            <name>Spring milestone</name>
-            <url>https://repo.spring.io/milestone</url>
+            <id>spring-snapshots</id>
+            <name>Spring Snapshots</name>
+            <url>https://repo.spring.io/snapshot</url>
         </pluginRepository>
     </pluginRepositories>
 
