--- a/pom.xml
+++ b/pom.xml
@@ -59,12 +59,10 @@
                         <builder>paketobuildpacks/builder:tiny</builder>
                         <name>${docker-image.prefix}/${project.artifactId}:${project.version}</name>
                         <env>
-                            <BP_BOOT_NATIVE_IMAGE>1</BP_BOOT_NATIVE_IMAGE>
-                            <BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>
-                                -Dspring.native.remove-yaml-support=true
+                            <BP_NATIVE_IMAGE>1</BP_NATIVE_IMAGE>
+                            <BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                                 --enable-https
-                                --initialize-at-build-time=sun.instrument.InstrumentationImpl
-                            </BP_BOOT_NATIVE_IMAGE_BUILD_ARGUMENTS>
+                            </BP_NATIVE_IMAGE_BUILD_ARGUMENTS>
                         </env>
                     </image>
                 </configuration>
