project update - update to spring-boot 2.5.1; - update to spring-native 0.10.10; - update to jib 3.1.1; - update to neo4j docker image 4.3.0; - update to redis docker image 6.2.4; - disable swagger petshop sample; - add remove-docker-images.sh; - update README.

--- a/restaurant-api/src/main/resources/application.properties
+++ b/restaurant-api/src/main/resources/application.properties
@@ -12,6 +12,7 @@ management.endpoint.health.show-details=always
 
 springdoc.show-actuator=true
 springdoc.swagger-ui.groups-order=DESC
+springdoc.swagger-ui.disable-swagger-default-url=true
 
 logging.level.org.springframework.cache=TRACE
 logging.level.org.springframework.transaction.interceptor=TRACE
