--- a/restaurant-api/pom.xml
+++ b/restaurant-api/pom.xml
@@ -3,7 +3,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>com.mycompany</groupId>
+        <groupId>com.ivanfranchin</groupId>
         <artifactId>springboot-caching-neo4j</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
@@ -15,9 +15,9 @@
 
     <properties>
         <springdoc-openapi.version>1.6.9</springdoc-openapi.version>
-        <org.mapstruct.version>1.4.2.Final</org.mapstruct.version>
+        <org.mapstruct.version>1.5.2.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <testcontainers.version>1.17.2</testcontainers.version>
+        <testcontainers.version>1.17.3</testcontainers.version>
     </properties>
 
     <dependencies>
