project upgrade - upgrade to spring-boot 3.0.2; - upgrade to springdoc-openapi 2.0.2; - upgrade to testcontainers 1.17.6; - upgrade to neo4j docker image 5.5.0; - upgrade to redis docker image 7.0.8.

--- a/restaurant-api/src/main/resources/application.properties
+++ b/restaurant-api/src/main/resources/application.properties
@@ -25,8 +25,8 @@ spring.cache.caffeine.spec=initialCapacity=100, maximumSize=1000, expireAfterAcc
 
 #---
 spring.config.activate.on-profile=redis
-spring.redis.host=${REDIS_HOST:localhost}
-spring.redis.port=${REDIS_PORT:6379}
+spring.data.redis.host=${REDIS_HOST:localhost}
+spring.data.redis.port=${REDIS_PORT:6379}
 spring.cache.type=redis
 spring.cache.redis.time-to-live=1h
 spring.cache.redis.enable-statistics=true
