Project upgrade and refactor code related to Testcontainers - upgrade to spring-boot 3.1.0; - upgrade to apache-maven 3.9.2; - add workaround related to the Spring Data Neo4j issue 2729.

--- a/restaurant-api/pom.xml
+++ b/restaurant-api/pom.xml
@@ -17,7 +17,6 @@
         <springdoc-openapi.version>2.1.0</springdoc-openapi.version>
         <org.mapstruct.version>1.5.5.Final</org.mapstruct.version>
         <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
-        <testcontainers.version>1.18.1</testcontainers.version>
     </properties>
 
     <dependencies>
@@ -84,6 +83,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-testcontainers</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>junit-jupiter</artifactId>
             <scope>test</scope>
@@ -94,18 +98,6 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-
-    <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.testcontainers</groupId>
-                <artifactId>testcontainers-bom</artifactId>
-                <version>${testcontainers.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
 
     <build>
         <plugins>
