--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,31 +1,31 @@
 services:
 
   neo4j:
-    image: neo4j:5.26.4
-    container_name: neo4j
+    image: 'neo4j:5.26.4'
+    container_name: 'neo4j'
     ports:
-      - "7474:7474"
-      - "7687:7687"
+      - '7474:7474'
+      - '7687:7687'
     environment:
-      - NEO4J_AUTH=none
+      - 'NEO4J_AUTH=none'
     healthcheck:
-      test: "wget --quiet --tries=1 --spider http://localhost:7474 || exit 1"
+      test: 'wget --quiet --tries=1 --spider http://localhost:7474 || exit 1'
 
   redis:
-    image: redis:7.4.2
-    container_name: redis
+    image: 'redis:7.4.2'
+    container_name: 'redis'
     ports:
-      - "6379:6379"
+      - '6379:6379'
     healthcheck:
       test: [ "CMD", "redis-cli","ping" ]
 
   redis-commander:
-    container_name: redis-commander
-    image: rediscommander/redis-commander:latest
-    restart: always
+    container_name: 'redis-commander'
+    image: 'rediscommander/redis-commander:latest'
+    restart: 'always'
     depends_on:
-      - redis
+      - 'redis'
     ports:
-      - "8081:8081"
+      - '8081:8081'
     environment:
-      - REDIS_HOSTS=local:redis:6379
+      - 'REDIS_HOSTS=local:redis:6379'
