--- a/pom.xml
+++ b/pom.xml
@@ -8,28 +8,31 @@
         <version>3.4.4</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-
     <groupId>com.ivanfranchin</groupId>
     <artifactId>springboot-caching-neo4j</artifactId>
     <version>1.0.0</version>
     <packaging>pom</packaging>
     <name>springboot-caching-neo4j</name>
     <description>Demo project for Spring Boot</description>
-
+    <url/>
+    <licenses>
+        <license/>
+    </licenses>
+    <developers>
+        <developer/>
+    </developers>
+    <scm>
+        <connection/>
+        <developerConnection/>
+        <tag/>
+        <url/>
+    </scm>
     <properties>
         <java.version>21</java.version>
     </properties>
 
-    <modules>
-        <module>restaurant-api</module>
-    </modules>
-
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
@@ -37,4 +40,7 @@
         </plugins>
     </build>
 
+    <modules>
+        <module>restaurant-api</module>
+    </modules>
 </project>
